...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Flowers,birds,animals,etc..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Szu-o1-gu0">
                                <rect key="frame" x="20" y="302" width="374" height="50"/>
                                <accessibility key="accessibilityConfiguration" identifier="searchText"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="tLx-h6-Dlw"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                <connections>
...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="prH-Wr-CGn">
                                <rect key="frame" x="100" y="372" width="214" height="55"/>
                                <color key="backgroundColor" red="0.1988253891" green="0.31905281540000002" blue="0.4519951344" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="searchButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="55" id="gkm-g7-50T"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain">
...
